--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,10 @@
 <section class="todoapp">
   <app-todo-add></app-todo-add>
-
-  <!--
-    This section should be hidden by default and shown when there are todos
-  -->
+  <!-- This section should be hidden by default and shown when there are todos -->
   <section class="main">
-    <input id="toggle-all" class="toggle-all" type="checkbox" />
-    <label for="toggle-all">Mark all as complete</label>
-
     <app-todos-list></app-todos-list>
   </section>
-  <!-- This footer should hidden by default and shown when there are todos -->
-  <footer class="footer">
-    <!-- This should be `0 items left` by default -->
-    <span class="todo-count"><strong>0</strong> item left</span>
-    <!-- Remove this if you don't implement routing -->
-    <ul class="filters">
-      <li><a class="selected" href="#/">All</a></li>
-      <li><a href="#/active">Active</a></li>
-      <li><a href="#/completed">Completed</a></li>
-    </ul>
-    <!-- Hidden if no completed items are left ↓ -->
-    <button class="clear-completed">Clear completed</button>
-  </footer>
+  <app-todo-footer></app-todo-footer>
 </section>
-<footer class="info">
-  <p>Double-click to edit a todo</p>
-  <!-- Remove the below line ↓ -->
-  <p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
-  <!-- Change this out with your name and url ↓ -->
-  <p>Created by <a href="http://todomvc.com">you</a></p>
-  <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-</footer>
-
+<!-- <app-footer></app-footer> -->
 <!-- <router-outlet></router-outlet> -->
