--- a/src/app/todo/todo-item/todo-item.component.html
+++ b/src/app/todo/todo-item/todo-item.component.html
@@ -1,7 +1,7 @@
 <li class="completed">
   <div class="view">
-    <input class="toggle" type="checkbox" checked />
-    <label>Taste JavaScript</label> <button class="destroy"></button>
+    <input class="toggle" type="checkbox" checked /> <label>Abdominales</label>
+    <button class="destroy"></button>
   </div>
-  <input class="edit" value="Create a TodoMVC template" />
+  <input class="edit" value="Abdominales" />
 </li>
