--- a/src/app/todo/todo-footer/todo-footer.component.html
+++ b/src/app/todo/todo-footer/todo-footer.component.html
@@ -1,13 +1,13 @@
 <!-- This footer should hidden by default and shown when there are todos -->
 <footer class="footer">
   <!-- This should be `0 items left` by default -->
-  <span class="todo-count"><strong>0</strong> item left</span>
+  <span class="todo-count"><strong>0</strong> Tareas Pendientes</span>
   <!-- Remove this if you don't implement routing -->
   <ul class="filters">
-    <li><a class="selected" href="#/">All</a></li>
-    <li><a href="#/active">Active</a></li>
-    <li><a href="#/completed">Completed</a></li>
+    <li><a class="selected" href="#/">Todos</a></li>
+    <li><a href="#/active">Pendientes</a></li>
+    <li><a href="#/completed">Completados</a></li>
   </ul>
   <!-- Hidden if no completed items are left ↓ -->
-  <button class="clear-completed">Clear completed</button>
+  <button class="clear-completed">Limpiar Completados</button>
 </footer>
