--- a/src/app/todo/todo-item/todo-item.component.html
+++ b/src/app/todo/todo-item/todo-item.component.html
@@ -1,6 +1,6 @@
 <li class="completed">
   <div class="view">
-    <input class="toggle" type="checkbox" checked /> <label>Abdominales</label>
+    <input class="toggle" type="checkbox" checked /> <label>{{ todo.texto }}</label>
     <button class="destroy"></button>
   </div>
   <input class="edit" value="Abdominales" />
