--- a/src/app/todo/todo-add/todo-add.component.html
+++ b/src/app/todo/todo-add/todo-add.component.html
@@ -1,5 +1,10 @@
 <header class="header">
   <h1>Por Hacer</h1>
-  <input [formControl]="txtInput" (keyup.enter)="agregarTODO()" class="new-todo" placeholder="Que Necesita Ser Hecho?"
-    autofocus />
+  <input
+    [formControl]="txtInput"
+    (keyup.enter)="agregarTODO()"
+    class="new-todo"
+    placeholder="Que Necesita Ser Hecho?"
+    autofocus
+  />
 </header>
