--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,1 +1,5 @@
-<p>todo works!</p>
+<section class="todoapp">
+  <app-todo-add></app-todo-add>
+  <section class="main"><app-todos-list></app-todos-list></section>
+  <app-todo-footer></app-todo-footer>
+</section>
