--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<section class="todoapp">
-  <app-todo-add></app-todo-add>
-  <section class="main"><app-todos-list></app-todos-list></section>
-  <app-todo-footer></app-todo-footer>
-</section>
+<app-todo></app-todo>
 <!-- <app-footer></app-footer> -->
 <!-- <router-outlet></router-outlet> -->
