--- a/src/app/todo/todo-footer/todo-footer.component.html
+++ b/src/app/todo/todo-footer/todo-footer.component.html
@@ -1,13 +1,11 @@
-<!-- This footer should hidden by default and shown when there are todos -->
 <footer class="footer">
-  <!-- This should be `0 items left` by default -->
-  <span class="todo-count"><strong>0</strong> Tareas Pendientes</span>
-  <!-- Remove this if you don't implement routing -->
+  <span class="todo-count">
+    <strong> {{ pendientes }} </strong> Tareas Pendientes
+  </span>
   <ul class="filters">
-    <li><a class="selected" href="#/">Todos</a></li>
-    <li><a href="#/active">Pendientes</a></li>
-    <li><a href="#/completed">Completados</a></li>
+    <li *ngFor="let item of filtroValidos">
+      <a href="#/" [ngClass]="{selected: item === filtroActual}" (click)="cambiarFiltro(item)">{{ item }}</a>
+    </li>
   </ul>
-  <!-- Hidden if no completed items are left ↓ -->
-  <button class="clear-completed">Limpiar Completados</button>
+  <button class="clear-completed" (click)="limpiarCompletados()">Limpiar Completados</button>
 </footer>
